--- a/index.html
+++ b/index.html
@@ -3,226 +3,115 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>DAX PRO v25</title>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700;900&family=Roboto:wght@700;900&display=swap" rel="stylesheet">
+    <link rel="manifest" href="manifest.json">
+    <title>DAX CAR SCAN</title>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700;900&display=swap" rel="stylesheet">
     <style>
         * { box-sizing: border-box; -webkit-tap-highlight-color: transparent; }
-        :root { --bg: #000; --accent: #00d2ff; --safe: #00ff88; --danger: #ff1111; }
-        
         body, html { 
-            margin: 0; padding: 0; background: var(--bg); color: #fff; 
-            font-family: 'Roboto', sans-serif; height: 100vh; overflow: hidden; 
+            margin: 0; padding: 0; background: #000; color: #fff; 
+            font-family: 'Segoe UI', Roboto, sans-serif; height: 100vh; overflow: hidden; 
         }
 
-        header { 
-            height: 70px; border-bottom: 2px solid #222; display: flex; 
-            align-items: center; justify-content: center; background: #000;
-            position: fixed; top: 0; width: 100%; z-index: 100;
+        /* Glavni kontejner */
+        .app-container {
+            display: flex; flex-direction: column; align-items: center; justify-content: center;
+            height: 100vh; padding: 20px; text-align: center;
         }
-        .header-title { font-family: 'Orbitron'; font-size: 18px; font-weight: 900; color: #fff; letter-spacing: 2px; }
 
-        #view-slider { display: flex; width: 200vw; height: 100vh; transition: transform 0.4s ease; }
-        .page { width: 100vw; height: 100vh; padding: 100px 15px 80px; flex-shrink: 0; overflow-y: auto; }
+        .logo { font-family: 'Orbitron', sans-serif; font-size: 32px; font-weight: 900; letter-spacing: 3px; margin-bottom: 50px; color: #fff; }
 
-        /* KARTICE SENZORA */
-        .card { 
-            background: #0c0c0c; border: 2px solid #222; border-radius: 20px; 
-            padding: 25px; margin-bottom: 15px; display: flex; 
-            justify-content: space-between; align-items: center;
-            transition: transform 0.2s; cursor: grab;
+        .btn {
+            width: 100%; max-width: 300px; padding: 20px; margin: 10px 0;
+            border-radius: 15px; font-family: 'Orbitron', sans-serif; font-size: 14px;
+            font-weight: 700; cursor: pointer; transition: 0.3s; text-transform: uppercase;
         }
-        .card:active { cursor: grabbing; border-color: var(--accent); }
-        .dragging { opacity: 0.5; }
+        .btn-primary { background: #00d2ff; color: #000; border: none; box-shadow: 0 0 20px rgba(0, 210, 255, 0.3); }
+        .btn-outline { background: transparent; color: #666; border: 2px solid #333; }
 
-        /* BOJE ZA VREDNOSTI */
-        .card.safe { border-left: 8px solid var(--safe); }
-        .card.danger { border-color: var(--danger); background: #1a0000; border-left: 8px solid var(--danger); }
-        .card.danger .card-val { color: var(--danger); text-shadow: 0 0 15px var(--danger); }
+        /* Overlay za povezivanje */
+        #connect-overlay {
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            background: rgba(0,0,0,0.95); display: none; flex-direction: column;
+            align-items: center; justify-content: center; z-index: 1000;
+        }
 
-        .card-label { font-size: 16px; color: #fff; font-weight: 900; text-transform: uppercase; }
-        .card-val { font-family: 'Orbitron'; font-size: 50px; font-weight: 900; color: #fff; }
-        .card-unit { font-size: 16px; color: #fff; font-family: 'Orbitron'; font-weight: 900; margin-left: 8px; }
+        .loader {
+            width: 60px; height: 60px; border: 5px solid #222; border-top: 5px solid #00d2ff;
+            border-radius: 50%; animation: spin 1s linear infinite; margin-bottom: 20px;
+        }
+        @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
 
-        /* MODAL */
-        #modal { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.95); display: none; z-index: 6000; align-items: center; justify-content: center; padding: 30px; }
-        .modal-content { border: 2px solid #333; padding: 30px; border-radius: 20px; width: 100%; text-align: center; background: #000; }
-        .norm-val { color: var(--safe); font-family: 'Orbitron'; font-size: 22px; font-weight: 900; margin: 15px 0; }
-
-        /* SPLASH */
-        #splash { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #000; display: flex; flex-direction: column; align-items: center; justify-content: center; z-index: 5000; transition: 0.6s ease; }
-        .btn-main { width: 85%; padding: 25px; margin: 10px; border-radius: 15px; font-family: 'Orbitron'; font-weight: 900; font-size: 16px; cursor: pointer; text-transform: uppercase; border: none; }
-        .btn-connect { background: var(--accent); color: #000; }
-        .btn-sim { background: transparent; color: #fff; border: 2px solid #fff; }
-
-        /* DIJAGNOSTIKA */
-        .diag-container { display: flex; flex-direction: column; height: 100%; }
-        .diag-box { flex-grow: 1; border: 3px solid #222; border-radius: 20px; padding: 15px; overflow-y: auto; background: #050505; min-height: 350px; }
-        .err-item { background: #200; border: 1px solid red; padding: 15px; border-radius: 12px; margin-bottom: 10px; }
-        .err-code { font-family: 'Orbitron'; font-size: 20px; font-weight: 900; color: red; }
-        .err-desc { color: #fff; font-weight: 900; font-size: 13px; margin-top: 3px; text-transform: uppercase; }
-
-        .nav-dots { position: fixed; bottom: 30px; left: 50%; transform: translateX(-50%); display: flex; gap: 20px; }
-        .dot { width: 12px; height: 12px; background: #333; border-radius: 50%; }
-        .dot.active { background: #fff; transform: scale(1.5); }
+        /* Lista adaptera */
+        #adapter-list {
+            width: 90%; max-width: 400px; background: #111; border-radius: 20px;
+            padding: 20px; display: none; border: 1px solid #222;
+        }
+        .adapter-item {
+            padding: 15px; border-bottom: 1px solid #222; display: flex;
+            justify-content: space-between; align-items: center; cursor: pointer;
+        }
+        .adapter-item:last-child { border: none; }
+        .status-dot { width: 10px; height: 10px; background: #00ff88; border-radius: 50%; box-shadow: 0 0 10px #00ff88; }
     </style>
 </head>
-<body ontouchstart="hTS(event)" ontouchmove="hTM(event)">
+<body>
 
-    <div id="splash">
-        <div class="splash-logo" style="font-family:Orbitron; font-size:35px; color:#fff; margin-bottom:40px;">DAX PRO</div>
-        <button class="btn-main btn-connect" onclick="connectAdapter()">Poveži Adapter</button>
-        <button class="btn-main btn-sim" onclick="startSim()">Simulacija</button>
+    <div class="app-container" id="main-screen">
+        <div class="logo">DAX CAR SCAN</div>
+        <button class="btn btn-primary" onclick="pokreniPovezivanje()">POVEŽI ADAPTER</button>
+        <button class="btn btn-outline" onclick="startSimulacija()">SIMULACIJA</button>
     </div>
 
-    <header><div class="header-title" id="h-title">LIVE DATA</div></header>
-
-    <div id="view-slider">
-        <div class="page">
-            <div id="main-list"></div>
+    <div id="connect-overlay">
+        <div id="loading-box" style="text-align: center;">
+            <div class="loader"></div>
+            <p style="font-family: 'Orbitron'; font-size: 12px; letter-spacing: 2px;">TRAŽIM ADAPTERE...</p>
         </div>
-        <div class="page">
-            <div class="diag-container">
-                <div class="diag-box" id="diag-out">
-                    <p style="text-align:center; color:#444; font-family:Orbitron; font-weight:900; margin-top:100px;">ČEKAM SKENIRANJE</p>
-                </div>
-                <button class="btn-main btn-connect" id="diag-btn" onclick="runDiagnostic()" style="width:100%; margin-top:15px;">SKENIRAJ VOZILO</button>
+
+        <div id="adapter-list">
+            <h3 style="font-family: 'Orbitron'; font-size: 14px; margin-bottom: 20px; color: #00d2ff;">PRONAĐENI UREĐAJI:</h3>
+            <div class="adapter-item" onclick="odaberiAdapter('OBDII Bluetooth')">
+                <span>OBDII Bluetooth</span>
+                <div class="status-dot"></div>
             </div>
-        </div>
-    </div>
-
-    <div class="nav-dots"><div id="d1" class="dot active"></div><div id="d2" class="dot"></div></div>
-
-    <div id="modal" onclick="this.style.display='none'">
-        <div class="modal-content" onclick="event.stopPropagation()">
-            <h2 id="m-title" style="font-family:Orbitron; color:#fff;"></h2>
-            <p style="color:#888; font-weight:900;">NORMALNE VRIJEDNOSTI:</p>
-            <div id="m-norm" class="norm-val"></div>
-            <p id="m-desc" style="color:#fff; font-size:14px; margin-top:10px;"></p>
-            <button class="btn-main btn-sim" onclick="document.getElementById('modal').style.display='none'" style="width:100%; margin-top:20px;">ZATVORI</button>
+            <div class="adapter-item" onclick="odaberiAdapter('V-LINK')">
+                <span>V-LINK Adapter</span>
+                <div class="status-dot"></div>
+            </div>
+            <div class="adapter-item" onclick="odaberiAdapter('ELM327 v2.1')">
+                <span>ELM327 v2.1</span>
+                <div class="status-dot"></div>
+            </div>
+            <button class="btn btn-outline" onclick="zatvoriOverlay()" style="margin-top: 20px; padding: 10px;">OTKAŽI</button>
         </div>
     </div>
 
     <script>
-        let tsX = 0, activePage = 0;
-        const sensors = [
-            { id: 'aku', label: 'Akumulator', unit: 'V', min: 13.0, max: 14.8, norm: '13.8V - 14.4V', desc: 'Napon alternatora u toku rada.' },
-            { id: 'rpm', label: 'Obrtaji', unit: 'RPM', min: 0, max: 4000, norm: '800 - 3500 RPM', desc: 'Brzina okretaja motora.' },
-            { id: 'ant', label: 'Temperatura', unit: '°C', min: 80, max: 100, norm: '88°C - 96°C', desc: 'Temperatura rashladne tečnosti.' },
-            { id: 'dpf', label: 'DPF Filter', unit: '%', min: 0, max: 70, norm: 'Ispod 45%', desc: 'Začepljenost filtera čestica.' },
-            { id: 'brz', label: 'Brzina', unit: 'KMH', min: 0, max: 200, norm: 'N/A', desc: 'Trenutna brzina kretanja.' }
-        ];
+        function pokreniPovezivanje() {
+            document.getElementById('connect-overlay').style.display = 'flex';
+            document.getElementById('loading-box').style.display = 'block';
+            document.getElementById('adapter-list').style.display = 'none';
 
-        const errorList = [
-            { code: "P0420", desc: "Efikasnost katalizatora ispod praga" },
-            { code: "P0101", desc: "MAF Senzor - problem sa opsegom" },
-            { code: "P0300", desc: "Nasumično izostajanje paljenja" },
-            { code: "P0171", desc: "Smeša previše siromašna (Bank 1)" },
-            { code: "P0401", desc: "EGR ventil - nedovoljan protok" },
-            { code: "P0113", desc: "IAT Senzor - visok ulazni napon" },
-            { code: "P0500", desc: "Senzor brzine vozila - kvar" },
-            { code: "P0234", desc: "Turbo punjač - prepunjavanje" },
-            { code: "P0606", desc: "Greška u procesoru ECU modula" },
-            { code: "P0135", desc: "Grejač lambda sonde - kvar" }
-        ];
-
-        function hTS(e) { tsX = e.touches[0].clientX; }
-        function hTM(e) {
-            if (e.target.closest('.card')) return;
-            let diff = tsX - e.touches[0].clientX;
-            if (Math.abs(diff) > 100) {
-                activePage = diff > 0 ? 1 : 0;
-                document.getElementById('view-slider').style.transform = `translateX(-${activePage * 100}vw)`;
-                document.getElementById('h-title').innerText = activePage == 0 ? "LIVE DATA" : "DIAGNOSTIKA";
-                document.getElementById('d1').className = activePage == 0 ? 'dot active' : 'dot';
-                document.getElementById('d2').className = activePage == 1 ? 'dot active' : 'dot';
-            }
+            // Simuliramo traženje adaptera od 2 sekunde
+            setTimeout(() => {
+                document.getElementById('loading-box').style.display = 'none';
+                document.getElementById('adapter-list').style.display = 'block';
+            }, 2500);
         }
 
-        function init() {
-            const list = document.getElementById('main-list');
-            list.innerHTML = sensors.map(s => `
-                <div id="card-${s.id}" class="card safe" draggable="true" onclick="openInfo('${s.id}')">
-                    <div class="card-label"><b>${s.label}</b></div>
-                    <div style="display:flex; align-items:baseline;">
-                        <span id="${s.id}-v" class="card-val">0</span>
-                        <span class="card-unit"><b>${s.unit}</b></span>
-                    </div>
-                </div>
-            `).join('');
-            setupDragAndDrop();
+        function odaberiAdapter(ime) {
+            alert("Povezivanje sa: " + ime);
+            zatvoriOverlay();
         }
 
-        function openInfo(id) {
-            const s = sensors.find(x => x.id === id);
-            document.getElementById('m-title').innerText = s.label;
-            document.getElementById('m-norm').innerText = s.norm;
-            document.getElementById('m-desc').innerText = s.desc;
-            document.getElementById('modal').style.display = 'flex';
+        function zatvoriOverlay() {
+            document.getElementById('connect-overlay').style.display = 'none';
         }
 
-        function runDiagnostic() {
-            const out = document.getElementById('diag-out');
-            const btn = document.getElementById('diag-btn');
-            if(btn.innerText.includes("SKENIRAJ")) {
-                out.innerHTML = "<p style='text-align:center; color:var(--accent); font-family:Orbitron; font-weight:900; margin-top:50px;'>SKENIRANJE...</p>";
-                setTimeout(() => {
-                    out.innerHTML = errorList.map(e => `
-                        <div class="err-item">
-                            <div class="err-code">${e.code}</div>
-                            <div class="err-desc">${e.desc}</div>
-                        </div>
-                    `).join('');
-                    btn.innerText = "OBRIŠI GREŠKE";
-                    btn.style.background = "red";
-                    btn.style.color = "#fff";
-                }, 1500);
-            } else {
-                out.innerHTML = "<p style='text-align:center; color:var(--safe); font-family:Orbitron; font-weight:900; margin-top:100px;'>SISTEM ISPRAVAN</p>";
-                btn.innerText = "SKENIRAJ VOZILO";
-                btn.style.background = "var(--accent)";
-                btn.style.color = "#000";
-            }
+        function startSimulacija() {
+            alert("Simulacioni mod pokrenut.");
         }
-
-        function setupDragAndDrop() {
-            const list = document.getElementById('main-list');
-            let draggedItem = null;
-            list.addEventListener('dragstart', (e) => { draggedItem = e.target; e.target.classList.add('dragging'); });
-            list.addEventListener('dragend', (e) => { e.target.classList.remove('dragging'); });
-            list.addEventListener('dragover', (e) => {
-                e.preventDefault();
-                const afterElement = getDragAfterElement(list, e.clientY);
-                if (afterElement == null) list.appendChild(draggedItem);
-                else list.insertBefore(draggedItem, afterElement);
-            });
-        }
-
-        function getDragAfterElement(container, y) {
-            const draggableElements = [...container.querySelectorAll('.card:not(.dragging)')];
-            return draggableElements.reduce((closest, child) => {
-                const box = child.getBoundingClientRect();
-                const offset = y - box.top - box.height / 2;
-                if (offset < 0 && offset > closest.offset) return { offset: offset, element: child };
-                else return closest;
-            }, { offset: Number.NEGATIVE_INFINITY }).element;
-        }
-
-        function startSim() { document.getElementById('splash').style.transform = "translateY(-100%)"; setInterval(updateData, 1000); }
-        async function connectAdapter() { try { await navigator.bluetooth.requestDevice({ filters: [{ namePrefix: 'OBD' }], optionalServices: ['00001101-0000-1000-8000-00805f9b34fb'] }); startSim(); } catch (e) { startSim(); } }
-
-        function updateData() {
-            sensors.forEach(s => {
-                let v = (s.id === 'aku') ? (Math.random() * 1 + 13.5).toFixed(1) : Math.floor(Math.random() * s.max);
-                const el = document.getElementById(s.id + '-v');
-                const card = document.getElementById('card-' + s.id);
-                if (el) el.innerText = v;
-                let safe = v >= s.min && v <= s.max;
-                if(s.id === 'brz' || s.id === 'rpm') safe = true;
-                if (card) card.className = 'card ' + (safe ? 'safe' : 'danger');
-            });
-        }
-
-        init();
     </script>
 </body>
 </html>
